[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/ButtonsStyles/LineEdit.tres" type="StyleBox" id=1]
[ext_resource path="res://src/ButtonsStyles/new_styleboxtexture.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/icon buttons/round icons/SIGN IN.png" type="Texture" id=3]
[ext_resource path="res://src/Login/Login.gd" type="Script" id=4]
[ext_resource path="res://assets/OpenArrow-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Rubik-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/main_font_64.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/1p.png" type="Texture" id=8]
[ext_resource path="res://assets/radio.png" type="Texture" id=9]
[ext_resource path="res://assets/radio_checked.png" type="Texture" id=10]
[ext_resource path="res://src/main_font_80.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/new buttons/blank.png" type="Texture" id=12]
[ext_resource path="res://assets/icon buttons/round icons/LOGIN.png" type="Texture" id=13]
[ext_resource path="res://src/ButtonsStyles/LineEditTexture.tres" type="StyleBox" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 6 )
fallback/0 = ExtResource( 5 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "guy@gmail.com"
}

[node name="Logo" type="TextureRect" parent="." groups=["ToModulate"]]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 64.0
margin_right = -64.0
margin_bottom = -452.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 133.0
margin_right = -64.0
margin_bottom = 133.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false

[node name="Login" type="VBoxContainer" parent="TabContainer" groups=["ToModulate"]]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Login"]
margin_top = 109.0
margin_right = 952.0
margin_bottom = 378.0
text = "In Order To Access
All Available Features,
Login To Your 12React Account
Or Register A New One"
align = 1
autowrap = true

[node name="Username" type="LineEdit" parent="TabContainer/Login" groups=["OpensKeyboard"]]
margin_top = 458.0
margin_right = 952.0
margin_bottom = 585.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = ExtResource( 14 )
align = 1
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="TabContainer/Login"]
visible = false
margin_top = 933.0
margin_right = 952.0
margin_bottom = 1015.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
align = 1
secret = true
placeholder_text = "Password"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Login"]
margin_top = 665.0
margin_right = 952.0
margin_bottom = 865.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register" type="TextureButton" parent="TabContainer/Login/HBoxContainer"]
margin_right = 474.0
margin_bottom = 200.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="TabContainer/Login/HBoxContainer/Register"]
margin_top = 200.0
margin_right = 458.0
margin_bottom = 265.0
text = "REGISTER"
align = 1
valign = 1

[node name="Login" type="TextureButton" parent="TabContainer/Login/HBoxContainer"]
margin_left = 478.0
margin_right = 952.0
margin_bottom = 200.0
size_flags_horizontal = 3
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="TabContainer/Login/HBoxContainer/Login"]
margin_left = 49.0
margin_top = 200.0
margin_right = 429.0
margin_bottom = 265.0
text = "LOGIN"
align = 1
valign = 1

[node name="Skip" type="Button" parent="TabContainer/Login"]
margin_top = 945.0
margin_right = 952.0
margin_bottom = 1145.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Login/Skip"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Login/Skip/VBoxContainer"]
margin_top = 67.0
margin_right = 952.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SKIP LOGIN"
align = 1

[node name="Label2" type="Label" parent="TabContainer/Login/Skip/VBoxContainer"]
visible = false
margin_top = 110.0
margin_right = 952.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "(Data Will Be Saved On This Device)"
align = 1

[node name="Notification" type="Label" parent="TabContainer/Login"]
margin_top = 1225.0
margin_right = 952.0
margin_bottom = 1290.0
align = 1

[node name="Register" type="VBoxContainer" parent="TabContainer" groups=["ToModulate"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Register"]
margin_top = 220.0
margin_right = 952.0
margin_bottom = 285.0
text = "Register A New 12React Account:"
align = 1

[node name="Name" type="LineEdit" parent="TabContainer/Register"]
margin_top = 317.0
margin_right = 952.0
margin_bottom = 418.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = ExtResource( 1 )
align = 1
placeholder_text = "Name"
placeholder_alpha = 0.8

[node name="RegisterEmail" type="LineEdit" parent="TabContainer/Register"]
margin_top = 450.0
margin_right = 952.0
margin_bottom = 551.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = ExtResource( 1 )
align = 1
placeholder_text = "Email"
placeholder_alpha = 0.8

[node name="RegisterPassword" type="LineEdit" parent="TabContainer/Register"]
visible = false
margin_top = 751.0
margin_right = 952.0
margin_bottom = 833.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = ExtResource( 1 )
align = 1
secret = true
placeholder_text = "Password"
placeholder_alpha = 0.8

[node name="RegisterAge" type="LineEdit" parent="TabContainer/Register"]
margin_top = 583.0
margin_right = 952.0
margin_bottom = 684.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = ExtResource( 1 )
align = 1
placeholder_text = "Age"
placeholder_alpha = 0.8

[node name="Country" type="LineEdit" parent="TabContainer/Register"]
margin_top = 716.0
margin_right = 952.0
margin_bottom = 817.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = ExtResource( 1 )
align = 1
placeholder_text = "Country"
placeholder_alpha = 0.8

[node name="CheckBox" type="CheckBox" parent="TabContainer/Register"]
margin_top = 849.0
margin_right = 952.0
margin_bottom = 922.0
custom_icons/checked = ExtResource( 10 )
custom_icons/unchecked = ExtResource( 9 )
pressed = true
text = "Get Updates From 12React"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Register"]
margin_top = 954.0
margin_right = 952.0
margin_bottom = 1082.0
rect_min_size = Vector2( 0, 128 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="TextureButton" parent="TabContainer/Register/HBoxContainer"]
margin_right = 460.0
margin_bottom = 128.0
size_flags_horizontal = 3
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="TabContainer/Register/HBoxContainer/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CANCEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignUp" type="TextureButton" parent="TabContainer/Register/HBoxContainer"]
margin_left = 492.0
margin_right = 952.0
margin_bottom = 128.0
size_flags_horizontal = 3
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="TabContainer/Register/HBoxContainer/SignUp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SIGN UP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="TabContainer/Register"]
margin_top = 1114.0
margin_right = 952.0
margin_bottom = 1179.0
align = 1

[connection signal="text_entered" from="TabContainer/Login/Username" to="." method="_on_Username_text_entered"]
[connection signal="text_entered" from="TabContainer/Login/Password" to="." method="_on_Password_text_entered"]
[connection signal="pressed" from="TabContainer/Login/HBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="TabContainer/Login/HBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="TabContainer/Login/Skip" to="." method="_on_Skip_pressed"]
[connection signal="text_entered" from="TabContainer/Register/Name" to="." method="_on_Name_text_entered"]
[connection signal="text_entered" from="TabContainer/Register/RegisterEmail" to="." method="_on_RegisterEmail_text_entered"]
[connection signal="text_entered" from="TabContainer/Register/RegisterPassword" to="." method="_on_RegisterPassword_text_entered"]
[connection signal="text_entered" from="TabContainer/Register/RegisterAge" to="." method="_on_RegisterAge_text_entered"]
[connection signal="text_entered" from="TabContainer/Register/Country" to="." method="_on_Country_text_entered"]
[connection signal="pressed" from="TabContainer/Register/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="TabContainer/Register/HBoxContainer/SignUp" to="." method="_on_SignUp_pressed"]
